# PythonProject

./: README.md  main.py  pyproject.toml
data/: english_names.txt  russian_names.txt
src/: README.md  main.py  masks.py  processing.py  widget.py
tests/: test.py  test_masks.py  test_processing.py
