[project]
name = "encryption-of-the-user-card"
version = "0.1.0"
description = "банковсая фича"
authors = [
    {name = "TRPEBSH"}
]
license = {text = "-"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.black]
line-length = 119
exclude = '\.git'

[tool.isort]
line_length = 119
multi_line_output = 3

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'
namespace_packages = true
